<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="settings">Settings</string>
    <string name="loan_simulation">Loan simulation</string>

    <string-array name="property_activity_array_type">
        <item> </item>
        <item>House</item>
        <item>Apartment</item>
        <item>Manor</item>
        <item>Loft</item>
    </string-array>

    <string-array name="property_activity_array_status">
        <item>Available</item>
        <item>Sold</item>
    </string-array>

    <string-array name="property_activity_array_is_available">
        <item>Available</item>
        <item>Sold</item>
    </string-array>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="loan_amount">Loan amount</string>
    <string name="loan_terms">Loan terms</string>
    <string name="minimum_price">Minimum price</string>
    <string name="maximum_price">Maximum price</string>
    <string name="available_before">Available before</string>
    <string name="available_since">Available since</string>
    <string name="maximum_room">Maximum room</string>
    <string name="minimum_room">Minimum room</string>
    <string name="maximum_surface">Maximum Surface</string>
    <string name="minimum_surface">Minimum Surface</string>
    <string name="property_type_wanted">Property type wanted</string>
    <string name="sold_since">Sold since</string>
    <string name="sold_before">Sold before</string>
    <string name="enter_search_information">Enter search information</string>
    <string name="api_key">AIzaSyDcADdHw6_IUPrjzmEnbo55OdmSdCKb27A</string>
    <string name="choose_availability_date">Choose availability date</string>
    <string name="description_300_300">Description (300/300)</string>
    <string name="room_s">Room(s)</string>
    <string name="bedroom_s">Bedroom(s)</string>
    <string name="bathroom_s">Bathroom(s)</string>
    <string name="points_of_interest_nearby">Points of interest nearby</string>
    <string name="city">City</string>
    <string name="address_hint">Example: 123 Broome Street</string>
    <string name="euro">€</string>
    <string name="price">Price</string>
    <string name="school">School</string>
    <string name="hospital">Hospital</string>
    <string name="restaurant">Restaurant</string>
    <string name="mall">Mall</string>
    <string name="cinema">Cinema</string>
    <string name="park">Park</string>
    <string name="choose_sold_date">Choose sold date</string>
    <string name="choose_agent">Choose agent</string>
    <string name="edit_property">Edit Property</string>
    <string name="add_property">Add Property</string>
    <string name="map_not_available_please_verify_your_connexion">Map not available, please verify your connexion</string>
    <string name="surface">Surface</string>
    <string name="property_list">Property List</string>
    <string name="map">Map</string>
    <string name="property_status">Property status</string>
    <string name="available">Available</string>
    <string name="No_points_of_interests_around">No point of interests around</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="address">Address</string>
    <string name="sold">Sold</string>
    <string name="currency">Currency</string>
    <string name="dollar">$</string>
    <string name="simulation_loan_terms_result">For a loan of %1$s %2$s,
        your monthly term is %3$s %4$s for a cost without insurance of %5$s %6$s</string>

    <string name="simulation_loan_amount_result">Your loan amount is %1$s %2$s, for a loan term of %3$s %4$s and
        for a loan cost without insurance of %5$s %6$s</string>

    <string name="notification_text">%1$s located at %2$s %3$s for %4$s %5$s.</string>
    <string name="filter_one_result_found">Search result: %1$d property found</string>
    <string name="filter_results_found">Search result: %1$d properties found</string>
    <string name="filter_0_result">Search result: 0  property found </string>
    <string name="map_not_available_please_check_connexion">Map not available, please check property address</string>
    <string name="description_lenght">Description %1$d/300)</string>
    <string name="cannot_add_more_pictures">Cannot add more pictures</string>
    <string name="number_of_pictures_minimum_between_1_and_7">Number of pictures minimum (between 1 and 7)</string>
    <string name="reinitiate_filters">Reinitiate filters</string>
    <string name="filter_property_list">Filter Property List</string>
</resources>
