<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_search_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/enter_search_information"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/search_property_cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/search_property_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/property_type_wanted"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinner_type_activity_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView23" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/minimum_price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_type_activity_search" />

                <EditText
                    android:id="@+id/editText_activity_search_minimum_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="number"
                    android:maxLength="9"
                    app:layout_constraintStart_toStartOf="@+id/textView26"
                    app:layout_constraintTop_toBottomOf="@+id/textView26" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:text="@string/maximum_price"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView26" />

                <EditText
                    android:id="@+id/editText_activity_search_maximum_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="number"
                    android:maxLength="9"
                    app:layout_constraintStart_toEndOf="@+id/editText_activity_search_minimum_price"
                    app:layout_constraintStart_toStartOf="@+id/textView27"
                    app:layout_constraintTop_toBottomOf="@+id/textView27" />


                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:inputType="number"
                    android:text="@string/minimum_surface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_activity_search_minimum_price" />

                <EditText
                    android:id="@+id/editTextNumber_activity_search_minimum_surface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="number"
                    android:maxLength="5"
                    app:layout_constraintStart_toStartOf="@+id/textView28"
                    app:layout_constraintTop_toBottomOf="@+id/textView28" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:inputType="number"
                    android:text="@string/maximum_surface"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView27"
                    app:layout_constraintTop_toBottomOf="@+id/editText_activity_search_maximum_price" />

                <EditText
                    android:id="@+id/editTextNumber_activity_search_maximum_surface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="number"
                    android:maxLength="5"
                    app:layout_constraintStart_toStartOf="@+id/textView29"
                    app:layout_constraintTop_toBottomOf="@+id/textView29" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/minimum_room"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNumber_activity_search_minimum_surface" />

                <EditText
                    android:id="@+id/editTextNumber_activity_search_minimum_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="number"
                    android:maxLength="2"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/textView21" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/maximum_room"
                    app:layout_constraintStart_toStartOf="@+id/textView29"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNumber_activity_search_maximum_surface" />

                <EditText
                    android:id="@+id/editTextNumber_activity_search_maximum_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="number"
                    android:maxLength="2"
                    app:layout_constraintStart_toStartOf="@+id/textView22"
                    app:layout_constraintTop_toBottomOf="@+id/textView22" />


                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/available_since"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNumber_activity_search_minimum_room" />

                <TextView
                    android:id="@+id/textView_date_available_since"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="TextView"
                    app:layout_constraintBottom_toBottomOf="@+id/imageButton_activity_search_date_available_since"
                    app:layout_constraintStart_toEndOf="@+id/imageButton_activity_search_date_available_since"
                    app:layout_constraintTop_toBottomOf="@+id/textView24" />

                <ImageButton
                    android:id="@+id/imageButton_activity_search_date_available_before"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/textView30"
                    app:layout_constraintTop_toBottomOf="@+id/textView30"
                    app:srcCompat="@drawable/ic_calendar" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/available_before"
                    app:layout_constraintStart_toStartOf="@+id/textView22"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNumber_activity_search_maximum_room" />

                <TextView
                    android:id="@+id/textView_date_available_before"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="TextView"
                    app:layout_constraintBottom_toBottomOf="@+id/imageButton_activity_search_date_available_before"
                    app:layout_constraintStart_toEndOf="@+id/imageButton_activity_search_date_available_before"
                    app:layout_constraintTop_toTopOf="@+id/imageButton_activity_search_date_available_before" />

                <ImageButton
                    android:id="@+id/imageButton_activity_search_date_available_since"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/textView24"
                    app:layout_constraintTop_toBottomOf="@+id/textView24"
                    app:srcCompat="@drawable/ic_calendar" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sold_since"
                    app:layout_constraintStart_toStartOf="@+id/imageButton_activity_search_date_available_since"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton_activity_search_date_available_since" />


                <ImageButton
                    android:id="@+id/imageButton_activity_search_date_sold_since"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/textView31"
                    app:layout_constraintTop_toBottomOf="@+id/textView31"
                    app:srcCompat="@drawable/ic_calendar" />


                <TextView
                    android:id="@+id/textView_date_sold_since"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="TextView"
                    app:layout_constraintBottom_toBottomOf="@+id/imageButton_activity_search_date_sold_since"
                    app:layout_constraintStart_toEndOf="@+id/imageButton_activity_search_date_sold_since"
                    app:layout_constraintTop_toTopOf="@+id/imageButton_activity_search_date_sold_since"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sold_before"
                    app:layout_constraintStart_toStartOf="@+id/imageButton_activity_search_date_available_before"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton_activity_search_date_available_before" />


                <ImageButton
                    android:id="@+id/imageButton_activity_search_date_sold_before"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/textView32"
                    app:layout_constraintTop_toBottomOf="@+id/textView32"
                    app:srcCompat="@drawable/ic_calendar" />

                <TextView
                    android:id="@+id/textView_date_sold_before"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="TextView"
                    app:layout_constraintBottom_toBottomOf="@+id/imageButton_activity_search_date_sold_before"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageButton_activity_search_date_sold_before"
                    app:layout_constraintTop_toTopOf="@+id/imageButton_activity_search_date_sold_before"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/search_property_activity_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="Filter Property List"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton_activity_search_date_sold_since" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView_search_property_activity_filter_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="11111111111111111111111111"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_property_cardView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_search_recycler_view_properties_filtered"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_search_property_activity_filter_result"
            tools:listitem="@layout/rv_properties_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>